changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix incorrect error message for throwing skill when no throwable object
was found.
Andreas Kirschbaum 2009-10-25

Fix checks for incorrect/missing parameters of 'abil' command.
Andreas Kirschbaum 2009-10-25

Adapt regression test to changed spell parameters (r12127).
Andreas Kirschbaum 2009-10-24

Fix #2879249 (SIGSEGV on transport moving across some edges of tiled maps).
Andreas Kirschbaum 2009-10-23

Change exits pointing to new map's default coordinates from (0,0) to
(-1,-1). This allows exits to point to (0,0).
Andreas Kirschbaum 2009-10-23

The hiscore command requests 50 high scores, but for some reason the command
that outputs the scores arbitrarily returns only 49.  Removed a needless
decrement of the max parameter.  Now the command returns 50.
Kevin Bulgrien 2009-08-31

Remove i18n strings and help files that used to support the output-sync and
output-count functionality.
Kevin Bulgrien 2009-08-31

Remove output-count and output-sync from the server.  Remove the output buffer
defines and declarations, along with the outputs_sync and outputs_count items.
Remove now unused flush_output_element(), check_output_buffers(), various
comments, calls to removed functions, output-sync and output-count command
support, player struct outputs_sync and outputs_count members.  This mod does
attempt to preserve player file compatibility with older server versions by
always saving legacy defaults to the player file outputs_sync and count
parameters.  Re-ran make cproto to add missing items fix brokenness in the